<resources>
    <string name="app_name">EduTeckFINALAPP</string>
    <string name="title_activity_navegador">Navegador</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="TextUser">Usuario</string>
    <string name="TextPassword">Password</string>
    <string name="button">Iniciar sesión</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="salir" >Salida</string>
    <string name="info">Información</string>
    <string name="menu">Menu</string>
    <string name="monza_italia_gp">Monza Italia GP</string>
    <string name="galer_a">Galería</string>
    <string name="navegador">Navegador</string>
    <string name="informaci_n">Información</string>
    <string name="escoge_una_opcion">Escoge una opcion</string>
    <string name="imagen">imagen</string>
    <string name="galeria">Galeria</string>
    <string name="hola_soy_jonathan_castillo_y_esta_es_mi_primera_vez_desarrollando_una_aplici_n_por_lo_regular_mis_gustos_est_n_enfocados_en_los_autom_viles_y_es_por_ello_que_coloque_unas_im_genes_de_los_monoplazas_de_f1_de_esta_temporada">Hola, soy Jonathan Castillo y esta es mi primera vez desarrollando una aplición :). Por lo regular mis gustos están enfocados en los automóviles y es por ello que coloque unas imágenes de los monoplazas de F1 de esta temporada.</string>
</resources>