<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinicio1__2_"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:text="@string/escoge_una_opcion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="118dp"
        android:layout_height="25dp"
        android:text="@string/monza_italia_gp"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:onClick="IrGaleria"
        android:text="@string/galer_a"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_menu_crop"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.289"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:onClick="IrNavegador"
        android:text="@string/navegador"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_menu_search"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="199dp"
        android:layout_height="52dp"
        android:onClick="IrInfo"
        android:text="@string/informaci_n"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_dialog_info"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="410dp"
        android:layout_height="414dp"
        android:layout_marginTop="380dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monzagp" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:background="#009688"
        android:backgroundTint="@color/material_dynamic_secondary50"
        android:backgroundTintMode="multiply"
        android:hapticFeedbackEnabled="true"
        android:onClick="Salida"
        android:shadowColor="#009688"
        android:text="@string/salir"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_lock_power_off"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956"
        app:rippleColor="#009688"
        app:strokeColor="#009688"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>