<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinicio1__2_"
    tools:context=".Informacion">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="151dp"
        android:layout_height="168dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/yo" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Salir"
        android:text="@string/salir"
        android:textColor="#000000"
        app:icon="@android:drawable/ic_lock_power_off"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="139dp"
        android:layout_height="114dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginBottom="668dp"
        android:rotationY="17"
        android:text="@string/info"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="394dp"
        android:layout_height="135dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="10sp"
        android:text="@string/hola_soy_jonathan_castillo_y_esta_es_mi_primera_vez_desarrollando_una_aplici_n_por_lo_regular_mis_gustos_est_n_enfocados_en_los_autom_viles_y_es_por_ello_que_coloque_unas_im_genes_de_los_monoplazas_de_f1_de_esta_temporada"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>