<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f1logo"
    tools:context=".Galeria">

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="613dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="70dp"
        android:onClick="Salir"
        android:text="@string/salir"
        android:textColor="#FFFFFF"
        app:icon="@android:drawable/ic_lock_power_off"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick,UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galeria"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="258dp"
        android:layout_height="254dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="420dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/alphatauriat031" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="284dp"
        android:layout_height="256dp"
        android:layout_marginTop="368dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ferrariff175inmelbourne" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="274dp"
        android:layout_height="218dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo" />
</androidx.constraintlayout.widget.ConstraintLayout>